# lexiTree

./: CMakeLists.txt  PROJECT_GUIDE.md  README.md  ROADMAP.md  bottom_up_1.txt  bottom_up_2.txt  bottom_up_3.txt  bottom_up_4.txt  codegrab-output.md  debug_lex_2  debug_lex_2.cpp  debug_lexer  debug_lexer.cpp  debug_out.txt  debug_td  debug_td.cpp  debug_td_v3  debug_td_v3.cpp  debug_td_v5  debug_td_verbose  debug_td_verbose.cpp  english-parser  examples.txt  failing_tests.sh  fix_aux.py  fix_parsers.py  justfile  lex  lex.cpp  lex_test  lex_test.cpp  main_debug  main_debug.cpp  main_exact  main_exact.cpp  main_final_debug  main_final_debug.cpp  main_trace  main_trace.cpp  parser_test  (+25 more)
data/: dictionary.txt
docs/: AGENT.md  addendum-functions-and-ambiguity.md  dictionary.txt  plan.md
include/: bottom_up_parser.h  display.h  lexer.h  parse_tree.h  pos_dict.h  symbol_table.h  top_down_parser.h
scripts/: run_smoke_tests
src/: bottom_up_parser.cpp  bottom_up_parser.cpp_new  display.cpp  lexer.cpp  main.cpp  parse_tree.cpp  pos_dict.cpp  symbol_table.cpp  top_down_parser.cpp
tests/: test_bottom_up.cpp  test_display.cpp  test_lexer.cpp  test_symbol_table.cpp  test_top_down.cpp
tests/fixtures/: sentences.txt
